# enterprise-intelligence-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  train_model.py
.github/workflows/: ci.yml
app/: __init__.py  agent.py  config.py  database.py  main.py  ml_model.py  tools.py
data/: sample_data.csv
tests/: __init__.py  test_sql_tool.py
